# plum

./: .gitignore  Cargo.toml  README.md  install-script.sh  todo.txt
cli/: Cargo.toml
cli/src/: main.rs
cli/src/checks/: mod.rs
cli/src/configuration/: mod.rs
cli/src/installer/: mod.rs
cli/src/utils/: mod.rs
cli/src/utils/compression/: mod.rs
cli/src/utils/handlers/: mod.rs
cli/src/utils/installation/: mod.rs
cli/src/utils/settings_modifier/: mod.rs
cli/src/utils/workspace_config/: mod.rs
config/: config.plum
core/: Cargo.toml
core/src/: main.rs
core/src/tools/: mod.rs
core/src/tools/health/: mod.rs
plugins/plugins/__MACOSX/: ._obsidian
plugins/plugins/graph/: mod.rs
plugins/plugins/obsidian/: Cargo.toml
plugins/plugins/obsidian/src/: aggregator.rs  core.rs  lib.rs  vectorizer.rs
plum/: Cargo.toml
plum/src/: main.rs
plum/src/coordinator/: coordinator.rs
plum/src/plugins/: coordinator.rs
plum/src/tools/: mod.rs
plum/src/tools/codebase_manager/: mod.rs
plum/src/tools/compressor/: mod.rs
plum/src/tools/coordinator/: mod.rs
plum/src/tools/health/: mod.rs
plum/src/tools/installer/: mod.rs
plum/src/tools/package_installer/: mod.rs
plum/src/tools/settings_modifier/: mod.rs
plum/src/tools/vector/: mod.rs
src/: main.rs
src/embeddings/: mod.rs  vectorizer.rs
src/obsidian/: mod.rs
utils/: Cargo.toml
utils/src/: graph.rs  lib.rs  vector.rs
