[package]
name = "plum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde_json = "1.0.113"
tempfile = "3.10.0"
zip = "0.6.6"
