[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.196"
reqwest = { version = "0.11.24", features = ["blocking"] }
zip = "0.5.11"
flate2 = "1.0.28"
zip-extract = "0.1.3"
zip-extensions = "0.6.2"
zip-dir = "0.1.0"
serde_json = "1.0.113"
# obsidian = { path = "../plugins/plugins/obsidian" }
utils = { path = "../utils" }
